Add allow/deny rules support.
- pfwd.c: add allow/deny rules support.
- pfwd.c: fix close sockets on error.

--- a/doc/pfwd.conf
+++ b/doc/pfwd.conf
@@ -30,6 +30,11 @@
 #UseSyslog=0
 
 #
+# Syslog facility used to log events.
+#
+SyslogFacility=DAEMON
+
+#
 # Log events to the given file
 #
 #LogFile=/var/log/pfwd.log
@@ -58,13 +63,20 @@
 #Forward=10.0.0.4
 ## Destination port
 #ForwardPort=3306
+## Allow IP/hosts
+#Allow=127.0.0.1,81.81.81.81
 
 #[www]
 ## Source IP address
 #Listen=[::]
 ## Source port number
 #ListenPort=80
+## Socket backlog 
+#Backlog=10
+## Socket buffer size
+#Buffer=1024
 ## Destination IP address
 #Forward=[::1]
 ## Destination port
 #ForwardPort=8080
+#Deny=[2001:1111:*],[2001:2222:*]
