--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,12 +1,12 @@
-pfwd_sysconfdir = @PACKAGE_SYSCONF_DIR@
+pfwd_docdir = $(docdir)
+pfwd_sysconfdir = $(sysconfdir)
+
+pfwd_doc_DATA = \
+	pfwd.conf
 
 pfwd_sysconf_DATA = \
 	pfwd.conf
 
-pfwd_docdir = @PACKAGE_DOC_DIR@
-
-pfwd_doc_DATA =
-
 EXTRA_DIST = \
-	$(pfwd_sysconf_DATA) \
-	$(pfwd_doc_DATA)
+	$(pfwd_doc_DATA) \
+	$(pfwd_sysconf_DATA)
