--- a/doc/pfwd.conf
+++ b/doc/pfwd.conf
@@ -4,40 +4,20 @@
 
 [main]
 #
-# Enable background execution.
+# Enable background execution
 #
 #Daemonize=0
 
 #
-# Lock file used by the daemon.
+# Process ID file used by the daemon
 #
-#LockFile=/var/run/pfwd.lock
-
-#
-# Process ID file used by the daemon.
-#
-#PIDFile=/var/run/pfwd.pid
+#PIDFile=/var/run/pfwd/pfwd.pid
 
 #
 # User privileges used by daemon execution
 #
-#User=nobody
-#Group=nogroup
-
-#
-# Enable to use syslog for logging events
-#
-#UseSyslog=0
-
-#
-# Syslog facility used to log events.
-#
-SyslogFacility=DAEMON
-
-#
-# Log events to the given file
-#
-#LogFile=/var/log/pfwd.log
+#User=root
+#Group=root
 
 #
 # Log level 
@@ -51,32 +31,60 @@ SyslogFacility=DAEMON
 #LogLevel=3
 
 #
+# Log events to the given file
+#
+#LogFile=/var/log/pfwd/pfwd.log
+
+#
+# Log events through syslog
+#
+#UseSyslog=0
+
+#
+# Syslog facility used to log events.
+#
+#SyslogFacility=DAEMON
+
+#
 # Redirections
 #
 
 #[sql]
+##
 ## Source IP address
 #Listen=127.0.0.1
+##
 ## Source port number
 #ListenPort=3306
+##
 ## Destination IP address
 #Forward=10.0.0.4
+##
 ## Destination port
 #ForwardPort=3306
-## Allow IP/hosts
+##
+## Allow IP list
 #Allow=127.0.0.1,81.81.81.81
 
 #[www]
+##
 ## Source IP address
 #Listen=[::]
+##
 ## Source port number
 #ListenPort=80
+##
 ## Socket backlog 
 #Backlog=10
+##
 ## Socket buffer size
 #Buffer=1024
+##
 ## Destination IP address
 #Forward=[::1]
+##
 ## Destination port
 #ForwardPort=8080
+##
+## Deny IP list
 #Deny=[2001:1111:*],[2001:2222:*]
