--- a/Makefile.in
+++ b/Makefile.in
@@ -38,7 +38,7 @@ subdir = .
 DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in $(srcdir)/config.h.in \
 	$(top_srcdir)/configure ABOUT-NLS AUTHORS COPYING ChangeLog \
-	INSTALL NEWS config.guess config.rpath config.sub depcomp \
+	INSTALL NEWS TODO config.guess config.rpath config.sub depcomp \
 	install-sh missing
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.in
@@ -157,6 +157,7 @@ ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
+FWD_VERSION = @FWD_VERSION@
 GETTEXT_MACRO_VERSION = @GETTEXT_MACRO_VERSION@
 GMSGFMT = @GMSGFMT@
 GMSGFMT_015 = @GMSGFMT_015@
@@ -185,13 +186,8 @@ MSGMERGE = @MSGMERGE@
 OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
 PACKAGE_BUGREPORT = @PACKAGE_BUGREPORT@
-PACKAGE_DATA_DIR = @PACKAGE_DATA_DIR@
-PACKAGE_DOC_DIR = @PACKAGE_DOC_DIR@
-PACKAGE_LOCALE_DIR = @PACKAGE_LOCALE_DIR@
 PACKAGE_NAME = @PACKAGE_NAME@
-PACKAGE_PREFIX_DIR = @PACKAGE_PREFIX_DIR@
 PACKAGE_STRING = @PACKAGE_STRING@
-PACKAGE_SYSCONF_DIR = @PACKAGE_SYSCONF_DIR@
 PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
@@ -200,7 +196,6 @@ PKG_CONFIG = @PKG_CONFIG@
 PKG_CONFIG_LIBDIR = @PKG_CONFIG_LIBDIR@
 PKG_CONFIG_PATH = @PKG_CONFIG_PATH@
 POSUB = @POSUB@
-PWD = @PWD@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
@@ -259,11 +254,25 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = src po doc
-pfwd_docdir = @PACKAGE_DOC_DIR@
-pfwd_doc_DATA = AUTHORS COPYING ChangeLog INSTALL NEWS README
+SUBDIRS = src po data doc
+pfwd_docdir = $(docdir)
+pfwd_doc_DATA = \
+	AUTHORS \
+	COPYING \
+	ChangeLog \
+	INSTALL \
+	NEWS \
+	README \
+	TODO \
+	VERSION
+
 ACLOCAL_AMFLAGS = -I m4
-EXTRA_DIST = config.rpath m4/ChangeLog
+EXTRA_DIST = \
+	$(fmond_doc_DATA) \
+	config.rpath \
+	m4/ChangeLog \
+	autogen.sh
+
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
