--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -98,6 +98,7 @@ ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
+FWD_VERSION = @FWD_VERSION@
 GETTEXT_MACRO_VERSION = @GETTEXT_MACRO_VERSION@
 GMSGFMT = @GMSGFMT@
 GMSGFMT_015 = @GMSGFMT_015@
@@ -126,13 +127,8 @@ MSGMERGE = @MSGMERGE@
 OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
 PACKAGE_BUGREPORT = @PACKAGE_BUGREPORT@
-PACKAGE_DATA_DIR = @PACKAGE_DATA_DIR@
-PACKAGE_DOC_DIR = @PACKAGE_DOC_DIR@
-PACKAGE_LOCALE_DIR = @PACKAGE_LOCALE_DIR@
 PACKAGE_NAME = @PACKAGE_NAME@
-PACKAGE_PREFIX_DIR = @PACKAGE_PREFIX_DIR@
 PACKAGE_STRING = @PACKAGE_STRING@
-PACKAGE_SYSCONF_DIR = @PACKAGE_SYSCONF_DIR@
 PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
@@ -141,7 +137,6 @@ PKG_CONFIG = @PKG_CONFIG@
 PKG_CONFIG_LIBDIR = @PKG_CONFIG_LIBDIR@
 PKG_CONFIG_PATH = @PKG_CONFIG_PATH@
 POSUB = @POSUB@
-PWD = @PWD@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
@@ -200,15 +195,17 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-pfwd_sysconfdir = @PACKAGE_SYSCONF_DIR@
+pfwd_docdir = $(docdir)
+pfwd_sysconfdir = $(sysconfdir)
+pfwd_doc_DATA = \
+	pfwd.conf
+
 pfwd_sysconf_DATA = \
 	pfwd.conf
 
-pfwd_docdir = @PACKAGE_DOC_DIR@
-pfwd_doc_DATA = 
 EXTRA_DIST = \
-	$(pfwd_sysconf_DATA) \
-	$(pfwd_doc_DATA)
+	$(pfwd_doc_DATA) \
+	$(pfwd_sysconf_DATA)
 
 all: all-am
 
