Add unix socket support.
- pfwd.c: allow forwarding independently of the socket type.
- pfwd.c: add UNIX socket support.
- pfwd.c: externalize functions to start/stop port forwarders.
- pfwd.c: add watchers lists for cleaning memory.
- pfwd.c: fix memory leaks in settings loading.
- log_console.c: fix one memory leak.
- log_file.c: fix one memory leak.
- log_syslog.c: fix one memory leak.

Signed-off-by: Boris HUISGEN <bhuisgen@hbis.fr>

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,7 +15,7 @@ pfwd_doc_DATA = \
 ACLOCAL_AMFLAGS = -I m4
 
 EXTRA_DIST = \
-	$(fmond_doc_DATA) \
+	$(pfwd_doc_DATA) \
 	config.rpath \
 	m4/ChangeLog \
 	autogen.sh
