--- a/doc/pfwd.conf
+++ b/doc/pfwd.conf
@@ -46,45 +46,80 @@
 #SyslogFacility=DAEMON
 
 #
-# Redirections
+# Redirectors
 #
 
-#[sql]
-##
-## Source IP address
-#Listen=127.0.0.1
-##
-## Source port number
-#ListenPort=3306
-##
-## Destination IP address
-#Forward=10.0.0.4
-##
-## Destination port
-#ForwardPort=3306
-##
-## Allow IP list
-#Allow=127.0.0.1,81.81.81.81
-
-#[www]
-##
-## Source IP address
-#Listen=[::]
-##
-## Source port number
+#[www-ipv4]
+#
+# Local address
+#
+#Listen=*
+#
+# Local port number
+#
 #ListenPort=80
-##
-## Socket backlog 
-#Backlog=10
-##
-## Socket buffer size
-#Buffer=1024
-##
-## Destination IP address
-#Forward=[::1]
-##
-## Destination port
+#
+# Local socket backlog 
+#
+#ListenBacklog=10
+#
+# Remote IP address
+#
+#Forward=127.0.0.1
+#
+# Remote port
+#
 #ForwardPort=8080
-##
-## Deny IP list
+#
+# Sockets buffer size
+#
+#BufferSize=4096
+#
+# Allow IP list
+#
+#Allow=81.12.34.*
+
+#[www-ipv6]
+#
+# Local address
+#
+#Listen=[::]
+#
+# Local port number
+#
+#ListenPort=80
+#
+# Local socket backlog 
+#
+#ListenBacklog=10
+#
+# Remote IP address
+#
+#Forward=[::1]
+#
+# Remote port
+#
+#ForwardPort=8080
+#
+# Deny IP list
+#
 #Deny=[2001:1111:*],[2001:2222:*]
+
+#[sql-unix]
+#
+# Local address
+#
+#Listen=unix:/var/run/pfwd-sql
+#
+# Local port number
+#
+#ListenPort=3306
+#
+# Remote IP address
+#
+#Forward=10.0.0.4
+#
+# Remote port
+#
+#ForwardPort=3306
+
