Add security options for unix sockets.
- pfwd.c: add listen owner / group / mode options support to secure
UNIX sockets.
- pfwd.c: fix to allow daemon execution without setting user and group
options.
- pfwd.c: fix defaults values for listen backlog.
- pfwd.c: fix for custom config file and add file check before options
loading.
- pfwd.c: fix GError by setting all pointers to NULL after freeing
memory.

Signed-off-by: Boris HUISGEN <bhuisgen@hbis.fr>

--- a/doc/pfwd.conf
+++ b/doc/pfwd.conf
@@ -73,7 +73,7 @@
 #
 # Sockets buffer size
 #
-#BufferSize=4096
+#BufferSize=65536
 #
 # Allow IP list
 #
@@ -101,6 +101,10 @@
 #
 #ForwardPort=8080
 #
+# Sockets buffer size
+#
+#BufferSize=65536
+#
 # Deny IP list
 #
 #Deny=[2001:1111:*],[2001:2222:*]
@@ -111,9 +115,17 @@
 #
 #Listen=unix:/var/run/pfwd-sql
 #
-# Local port number
+# Owner of the UNIX socket.
 #
-#ListenPort=3306
+#ListenOwner=root
+#
+# Group of the UNIX socket.
+#
+#ListenGroup=root
+#
+# Permissions of the UNIX socket.
+#
+#ListenMode=0777
 #
 # Remote IP address
 #
