--- a/configure.in
+++ b/configure.in
@@ -106,18 +106,18 @@ AC_CHECK_LIB([ev],[ev_sleep],[],[
 	])
 
 # Checks for header files.
-AC_CHECK_HEADERS([fcntl.h libintl.h locale.h syslog.h])
-AC_CHECK_HEADERS([arpa/inet.h netinet/in.h])
+AC_CHECK_HEADERS([arpa/inet.h fcntl.h libintl.h locale.h netinet/in.h stdlib.h string.h sys/socket.h syslog.h unistd.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_INLINE
-
-# Checks for library functions.
-AC_CHECK_FUNCS([atexit memset setlocale socket strcasecmp strdup])
-AC_FUNC_FORK
-AC_FUNC_MALLOC
 AC_TYPE_PID_T
 AC_TYPE_SIZE_T
+
+# Checks for library functions.
+AC_FUNC_CHOWN
+AC_FUNC_FORK
+AC_FUNC_MALLOC
+AC_CHECK_FUNCS([atexit memset setlocale socket strcasecmp strdup strtol])
 
 # Debug and release flags
 case "${debug}" in
